@@ -9,6 +9,7 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -135,7 +136,7 @@ public class CreateTableQuery implements Query {
 
     @Override
     public List<Object> getParameters() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
