@@ -6,6 +6,7 @@ import com.bitaspire.jdborm.exception.JdbOrmException;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -82,7 +83,7 @@ public class DropIndexQuery implements Query {
 
     @Override
     public List<Object> getParameters() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     /**
